# copra

./: CMakeLists.txt  README.md  package.xml
include/copra/: AutoSpan.h  LMPC.h  LSSOLSolver.h  SolverInterface.h  constraints.h  costFunctions.h  debugUtils.h
include/copra/solvers/: GUROBISolver.h  LSSOLSolver.h  OSQPSolver.h  QLDSolver.h  QuadProgSolver.h  all.h  qpOASESSolver.h  utils.h
include/copra/systems/: System.h  TimeInvariantSystem.h  TimeVariantSystem.h
src/: AutoSpan.cpp  LMPC.cpp  LSSOLSolver.cpp  SolverInterface.cpp  constraints.cpp  costFunctions.cpp  debugUtils.cpp
src/solvers/: GUROBISolver.cpp  OSQPSolver.cpp  QLDSolver.cpp  QuadProgSolver.cpp  qpOASESSolver.cpp  utils.cpp
src/systems/: System.cpp  TimeInvariantSystem.cpp  TimeVariantSystem.cpp
test/: CMakeLists.txt  TestLMPC.cpp  TestSolvers.cpp  TestTimeInvariantSystems.cpp  TestTimeVariantSystems.cpp  systems.h  time_invariant_systems.h  time_variant_systems.h  tools.cpp  tools.h
